# telegram-tui

./: .gitignore  CMakeLists.txt  README.md
include/: chat.h  tdlib.h  tui.h
src/: chat.c  main.c  tdlib.c  tui.c
